them mot chut responsive - chua on lam

--- a/frontend/src/app/admin/admin-orders/admin-orders.component.css
+++ b/frontend/src/app/admin/admin-orders/admin-orders.component.css
@@ -94,6 +94,11 @@ table {
     border: none;
 }
 
+.change-view:focus {
+    box-shadow: none;
+    outline: none;
+}
+
   .change-view {
     background: transparent;
     width: 34px;
