--- a/frontend/src/app/admin/orders-list/orders-list.component.css
+++ b/frontend/src/app/admin/orders-list/orders-list.component.css
@@ -6,6 +6,11 @@
 }
 
 
+.change-view:focus {
+    box-shadow: none;
+    outline: none;
+}
+
 .container-fluid {
     border: 1px solid #e0e0e0;
     border-radius: 10px;
