--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -37,7 +37,7 @@
                       <product-card></product-card>
                       <product-card></product-card>
                       <product-card></product-card>
-                      <product-card></product-card>
+
                     </div>
                   </div>
                   <div class="carousel-item">
@@ -47,7 +47,7 @@
                       <product-card></product-card>
                       <product-card></product-card>
                       <product-card></product-card>
-                      <product-card></product-card>
+
                     </div>
                   </div>
 
@@ -58,7 +58,7 @@
                       <product-card></product-card>
                       <product-card></product-card>
                       <product-card></product-card>
-                      <product-card></product-card>
+
                     </div>
                   </div>
 
@@ -186,9 +186,9 @@
         <div class="container">
           <div id="CEI1" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators daucham">
-              <li data-target="#CEI" data-slide-to="0" class="active"></li>
-              <li data-target="#CEI" data-slide-to="1"></li>
-              <li data-target="#CEI" data-slide-to="2"></li>
+              <li data-target="#CEI1" data-slide-to="0" class="active"></li>
+              <li data-target="#CEI1" data-slide-to="1"></li>
+              <li data-target="#CEI1" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -198,7 +198,7 @@
                   <product-card></product-card>
                   <product-card></product-card>
                   <product-card></product-card>
-                  <product-card></product-card>
+
                 </div>
               </div>
               <div class="carousel-item">
@@ -208,14 +208,13 @@
                   <product-card></product-card>
                   <product-card></product-card>
                   <product-card></product-card>
-                  <product-card></product-card>
+
                 </div>
               </div>
 
               <div class="carousel-item">
 
                 <div class="product-row-view">
-                  <product-card></product-card>
                   <product-card></product-card>
                   <product-card></product-card>
                   <product-card></product-card>
@@ -242,6 +241,7 @@
       </div>
     </div>
 
+    <!-- ẨN ALL PRODUCT VÀ THAY BẰNG NHẬN XÉT CỦA NGƯỜI DÙNG
 <div class="row allprod">
   <h4 class="h-text"> ALL PRODUCTs </h4>
 
@@ -269,6 +269,430 @@
 <product-card></product-card>
     </div>
 </div>
+
+-->
+
+    <div class="row customer-feedback" id="big-screen">
+
+      <h4 class="h-text"> CUSTOMERs' FEEDBACKs </h4>
+
+      <div class="feedback-view">
+        <div class="container">
+          <div id="user-comment-carousel" class="carousel slide" data-interval="3000" data-ride="carousel">
+            <div class="carousel-inner ">
+              <div class="carousel-item active">
+                <div class="row">
+                  <div class="col">
+                    <div class="card feedback-card">
+                      <div class="card-body">
+                        <div class="column">
+                          <div class="row no-gutters">
+                            <div class="avatar-col">
+                              <img class="avatar" src="https://i.imgur.com/raxfdwl.png" alt="">
+                            </div>
+
+                            <div class="name-col">
+                              <p class="customer-name"> Bé Sa</p>
+                              <p class="customer-class">
+                                NEW CUSTOMER <span class="fas fa-award"></span>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="row">
+                            <div class="col feedback-content">
+                              <p class="feedback-text">Xin chào cô chú xin chào các bạn</p>
+                              <p class="feedback-time">12/23/2019</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col">
+                    <div class="card feedback-card">
+                      <div class="card-body">
+                        <div class="column">
+                          <div class="row no-gutters">
+                            <div class="avatar-col">
+                              <img class="avatar" src="https://i.imgur.com/YgDOOTW.png" alt="">
+                            </div>
+
+                            <div class="name-col">
+                              <p class="customer-name"> Bé Bu</p>
+                              <p class="customer-class">
+                                NEW CUSTOMER <span class="fas fa-award"></span>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="row">
+                            <div class="col feedback-content">
+                              <p class="feedback-text">Web nhìn cũng được, giá rẻ hơn shopee</p>
+                              <p class="feedback-time">12/23/2019</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col">
+                    <div class="card feedback-card">
+                      <div class="card-body">
+                        <div class="column">
+                          <div class="row no-gutters">
+                            <div class="avatar-col">
+                              <img class="avatar" src="https://i.imgur.com/YgDOOTW.png" alt="">
+                            </div>
+
+                            <div class="name-col">
+                              <p class="customer-name"> Bé Vy</p>
+                              <p class="customer-class">
+                                NEW CUSTOMER <span class="fas fa-award"></span>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="row">
+                            <div class="col feedback-content">
+                              <p class="feedback-text">Happy New Year!!!</p>
+                              <p class="feedback-time">12/23/2019</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col">
+                    <div class="card feedback-card">
+                      <div class="card-body">
+                        <div class="column">
+                          <div class="row no-gutters">
+                            <div class="avatar-col">
+                              <img class="avatar" src="https://i.imgur.com/raxfdwl.png" alt="">
+                            </div>
+
+                            <div class="name-col">
+                              <p class="customer-name"> Bé Bi</p>
+                              <p class="customer-class">
+                                NEW CUSTOMER <span class="fas fa-award"></span>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="row">
+                            <div class="col feedback-content">
+                              <p class="feedback-text">Muốn đi nhanh thì đi một mình, muốn đi xa thì đi một mình nhưng
+                                đi xa hơn</p>
+                              <p class="feedback-time">12/23/2019</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col">
+                    <div class="card feedback-card">
+                      <div class="card-body">
+                        <div class="column">
+                          <div class="row no-gutters">
+                            <div class="avatar-col">
+                              <img class="avatar" src="https://i.imgur.com/YgDOOTW.png" alt="">
+                            </div>
+
+                            <div class="name-col">
+                              <p class="customer-name"> Bé UIT</p>
+                              <p class="customer-class">
+                                NEW CUSTOMER <span class="fas fa-award"></span>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="row">
+                            <div class="col feedback-content">
+                              <p class="feedback-text">lam web kho qua :'(</p>
+                              <p class="feedback-time">12/23/2019</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col">
+                    <div class="card feedback-card">
+                      <div class="card-body">
+                        <div class="column">
+                          <div class="row no-gutters">
+                            <div class="avatar-col">
+                              <img class="avatar" src="https://i.imgur.com/lMzN8nB.png" alt="">
+                            </div>
+
+                            <div class="name-col">
+                              <p class="customer-name"> Doraemon</p>
+                              <p class="customer-class">
+                                NEW CUSTOMER <span class="fas fa-award"></span>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="row">
+                            <div class="col feedback-content">
+                              <p class="feedback-text">はじめまして。私はドラえもんです。</p>
+                              <p class="feedback-time">12/23/2019</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+
+                </div>
+              </div>
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
+
+
+
+<!-- KHU VỰC NÀY RẤT GHÊ -->
+
+    <div class="row customer-feedback" id="small-screen">
+
+      <h4 class="h-text"> CUSTOMERs' FEEDBACKs </h4>
+
+      <div class="feedback-view">
+        <div class="container">
+          <div id="user-comment-carousel" class="carousel slide" data-interval="2000" data-ride="carousel">
+            <div class="carousel-inner ">
+              <div class="carousel-item active">
+                <div class="row">
+                  <div class="col">
+                    <div class="card feedback-card">
+                      <div class="card-body">
+                        <div class="column">
+                          <div class="row no-gutters">
+                            <div class="avatar-col">
+                              <img class="avatar" src="https://i.imgur.com/raxfdwl.png" alt="">
+                            </div>
+
+                            <div class="name-col">
+                              <p class="customer-name"> Bé Sa</p>
+                              <p class="customer-class">
+                                NEW CUSTOMER <span class="fas fa-award"></span>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="row">
+                            <div class="col feedback-content">
+                              <p class="feedback-text">Xin chào cô chú xin chào các bạn</p>
+                              <p class="feedback-time">12/23/2019</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col">
+                    <div class="card feedback-card">
+                      <div class="card-body">
+                        <div class="column">
+                          <div class="row no-gutters">
+                            <div class="avatar-col">
+                              <img class="avatar" src="https://i.imgur.com/YgDOOTW.png" alt="">
+                            </div>
+
+                            <div class="name-col">
+                              <p class="customer-name"> Bé Bu</p>
+                              <p class="customer-class">
+                                NEW CUSTOMER <span class="fas fa-award"></span>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="row">
+                            <div class="col feedback-content">
+                              <p class="feedback-text">Web nhìn cũng được, giá rẻ hơn shopee</p>
+                              <p class="feedback-time">12/23/2019</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="carousel-item">
+            
+                <div class="row">
+
+                  <div class="col">
+                    <div class="card feedback-card">
+                      <div class="card-body">
+                        <div class="column">
+                          <div class="row no-gutters">
+                            <div class="avatar-col">
+                              <img class="avatar" src="https://i.imgur.com/YgDOOTW.png" alt="">
+                            </div>
+
+                            <div class="name-col">
+                              <p class="customer-name"> Bé Vy</p>
+                              <p class="customer-class">
+                                NEW CUSTOMER <span class="fas fa-award"></span>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="row">
+                            <div class="col feedback-content">
+                              <p class="feedback-text">Happy New Year!!!</p>
+                              <p class="feedback-time">12/23/2019</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+      
+              </div>
+
+              <div class="carousel-item">
+                <div class="row">
+
+                  <div class="col">
+
+                    <div class="card feedback-card">
+                      <div class="card-body">
+                        <div class="column">
+                          <div class="row no-gutters">
+                            <div class="avatar-col">
+                              <img class="avatar" src="https://i.imgur.com/raxfdwl.png" alt="">
+                            </div>
+
+                            <div class="name-col">
+                              <p class="customer-name"> Bé Bi</p>
+                              <p class="customer-class">
+                                NEW CUSTOMER <span class="fas fa-award"></span>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="row">
+                            <div class="col feedback-content">
+                              <p class="feedback-text">Muốn đi nhanh thì đi một mình, muốn đi xa thì đi một mình nhưng
+                                đi xa hơn</p>
+                              <p class="feedback-time">12/23/2019</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+
+              <div class="carousel-item">
+                <div class="row">
+                <div class="col">
+                  <div class="card feedback-card">
+                    <div class="card-body">
+                      <div class="column">
+                        <div class="row no-gutters">
+                          <div class="avatar-col">
+                            <img class="avatar" src="https://i.imgur.com/YgDOOTW.png" alt="">
+                          </div>
+
+                          <div class="name-col">
+                            <p class="customer-name"> Bé UIT</p>
+                            <p class="customer-class">
+                              NEW CUSTOMER <span class="fas fa-award"></span>
+                            </p>
+                          </div>
+                        </div>
+
+                        <div class="row">
+                          <div class="col feedback-content">
+                            <p class="feedback-text">lam web kho qua :'(</p>
+                            <p class="feedback-time">12/23/2019</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              </div>
+
+
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col">
+                    <div class="card feedback-card">
+                      <div class="card-body">
+                        <div class="column">
+                          <div class="row no-gutters">
+                            <div class="avatar-col">
+                              <img class="avatar" src="https://i.imgur.com/lMzN8nB.png" alt="">
+                            </div>
+
+                            <div class="name-col">
+                              <p class="customer-name"> Doraemon</p>
+                              <p class="customer-class">
+                                NEW CUSTOMER <span class="fas fa-award"></span>
+                              </p>
+                            </div>
+                          </div>
+
+                          <div class="row">
+                            <div class="col feedback-content">
+                              <p class="feedback-text">はじめまして。私はドラえもんです。</p>
+                              <p class="feedback-time">12/23/2019</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+<!-- KHU VỰC NÀY RẤT GHÊ -->
+
+
+
+
 
     <div class="row signup-sign">
       <div class="cont">
