--- a/frontend/src/app/product-detail/product-detail.component.html
+++ b/frontend/src/app/product-detail/product-detail.component.html
@@ -9,13 +9,7 @@
     <h2 class="cat-name">GRASS <span class="remaining-products">(23 products)</span> </h2>
 
     <div class="row no-gutters" style="margin-top: 20px;">
-        <div class="col col-2">
-            <div class="category">
-                <product-filter></product-filter>
-            </div>
-        </div>
-
-        <div class="col col-10">
+ <div class="col">
             <div class="detail">
                 <div class="row no-gutters no r-in">
                     <div class="col-5 image">
