--- a/frontend/src/app/bs-navbar/bs-navbar.component.html
+++ b/frontend/src/app/bs-navbar/bs-navbar.component.html
@@ -9,7 +9,7 @@
     </div>
     <!--
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="bars"></span>
+    <span class="fas fa-bars"></span>
   </button>-->
     <div class="col">
 
@@ -18,19 +18,13 @@
       </div>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav" style="display: flex; flex-direction: row">
           <li class="nav-item">
-            <a class="nav-link" routerLink="/login"
-              style="margin-right: 10px; margin-left: -10px;">Login</a>
+            <a class="nav-link" routerLink="/login">Login</a>
           </li>
-
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/sign-up">Sign-Up</a>
-          </li>
-
 
           <!-- hiển thị first name sau khi đăng nhập , khi ở anonymous user thì chỉ hiển thị login, sign-up -->
-          <li class="dropdown ">
+          <li class="dropdown">
             <a class="drod-togg" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="firstname" *ngIf="anonymousUser"> Firstname </span> <i class="far fa-user"></i></a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
