xong responsive cho homepage, nhin hoi ghe nhung neu CHI xem trnen 2 kich thuoc man hinh thi ko sao

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -4,16 +4,15 @@
 
     <!-- ảnh bìa -->
     <div class=" co headimage">
-      <img src="https://i.imgur.com/rItMYD3.png" class="img" alt="" style="margin-bottom:50px">
+      <img src="https://i.imgur.com/rItMYD3.png" class="img-cover" alt="" style="margin-bottom:50px">
     </div>
 
     <!-- chỗ chứa banner quảng cáo giảm 50% và carousel cho mấy món christmas -->
     <div class="row" style="width: 100%;">
-      <div class="column mainp"
-        style="background: #d93a3a; display: flex; flex-direction: column; align-items: center; width: 100%;">
+      <div class="column mainp">
         <!-- banner giảm 50% -->
         <div class=" coco prom">
-          <img src="https://i.imgur.com/ZfbWxMC.png" class="img" alt="" style="width: 1250px;">
+          <img src="https://i.imgur.com/ZfbWxMC.png" class="img" alt="">
         </div>
         <!--christmas carousel-->
         <div class=" co prod ">
@@ -21,7 +20,6 @@
           <h4 class="h-text"> CHRISTMAS DEALS </h4>
 
           <div class="product-view">
-
             <div class="container">
               <div id="CEI" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators daucham">
@@ -64,12 +62,12 @@
 
                 </div>
                 <a class="carousel-control-prev" href="#CEI" role="button" data-slide="prev"
-                  style="opacity: 1; margin-left: -110px; transition: 0.2s;">
+                  >
                   <span class="prev-icon" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
                 </a>
                 <a class="carousel-control-next" href="#CEI" role="button" data-slide="next"
-                  style="opacity: 1; margin-right: -110px; transition: 0.2s;">
+            >
                   <span class="next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </a>
@@ -89,7 +87,7 @@
 
 
     <!-- cac the loai product -->
-    <div class=" co c-type" style="margin-top:100px">
+    <div class=" co c-type">
 
       <h4 class="h-text"> SHOP BY CATEGORY </h4>
 
@@ -223,13 +221,11 @@
               </div>
 
             </div>
-            <a class="carousel-control-prev" href="#CEI1" role="button" data-slide="prev"
-              style="opacity: 1; margin-left: -110px; transition: 0.2s;">
+            <a class="carousel-control-prev" href="#CEI1" role="button" data-slide="prev">
               <span class="prev-icon" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#CEI1" role="button" data-slide="next"
-              style="opacity: 1; margin-right: -110px; transition: 0.2s;">
+            <a class="carousel-control-next" href="#CEI1" role="button" data-slide="next">
               <span class="next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
