--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -25,10 +25,6 @@ z-index: 1;
     margin-top: 50px;
 }
 
-.img{
-    width: 100%;
-}
-
 .btn {
     border: none;
     height: 50px;
@@ -77,12 +73,34 @@ z-index: 1;
 
 
 .product-row-view {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    padding-left: 10px;
-    padding-right: 10px;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    justify-items: center;
+  }
+
+  
+.carousel-control-prev:hover > .prev-icon {
+    width: 20px;
+    transform: translateX(-20px);
+}
+
+.carousel-control-next:hover > .next-icon{
+    width: 20px;
+    transform: translateX(20px);
+}
+
+.carousel-control-next {
+    opacity: 1; 
+    margin-right: -20px;
+    width: 50px;
+
+}
+
+.carousel-control-prev{
+    margin-left: -20px;
+    opacity: 1; 
+    width: 50px;
+
 }
 
     .carousel-item {
@@ -112,17 +130,16 @@ z-index: 1;
                 justify-content: center;
         margin-right: -15px;
     }
- 
-@media (max-width: 1200px)
- {
-    .type-cat {
-        display: grid;
-        grid-template-columns: 16% 16% 16% 16% 16% 16% ;
-        padding-top: 20px;
-                justify-content: center;
-        margin-right: -15px;
+
+    .mainp {
+        background: #d93a3a; 
+        display: flex; 
+        flex-direction: column; 
+        align-items: center; 
+        width: 100%;
     }
- }
+
+
 
     .btnn {
         margin-top: 10px;
@@ -191,24 +208,9 @@ z-index: 1;
     margin-bottom: -32px;
 }
 
-.carousel-control-prev:hover {
-    transform: translateX(-15px);
-}
-
-.carousel-control-next:hover {
-    transform: translateX(15px);
-}
-
-.carousel-control-prev:hover > .prev-icon {
-    width: 40px;
-}
-
-.carousel-control-next:hover > .next-icon{
-    width: 40px;
-}
 
 .prev-icon {
-    width: 30px;
+    width: 0px;
     height: 2px;
 position: relative;
 background: #242424;
@@ -232,7 +234,7 @@ transition: 0.2s;
   }
   
   .next-icon {
-    width: 30px;
+    width: 0px;
     height: 2px;
 position: relative;
 background: #242424;
@@ -354,11 +356,15 @@ transition: 0.2s;
 
 .feedback-view {
     width: 100%;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 
 .container-fluid {
     width: 100%;
+}
+
+.img {
+    width: 1250px;
 }
 
 .hey {
@@ -436,6 +442,11 @@ flex-direction: row;
     transform: rotate(45deg);
 }
 
+.carousel-inner {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
 .ayo {
     display: grid;
 grid-template-columns: 47% 47%;
@@ -487,8 +498,7 @@ button:focus {
 }
 
 .customer-feedback {
-    padding-top: 30px;
-    background: #f7f7f7;
+    margin-top: -20px;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -498,9 +508,15 @@ button:focus {
 
 .feedback-card {
     margin-top:10px;
+    margin-bottom: 10px;
     border: none;
     border-radius: 0;
-    box-shadow: 0 3px 6px 0 #31313115;
+    box-shadow:
+    -13px 0 0 -10px #fff,
+   13px 0 0 -10px #fff,
+   0 -13px 0 -10px #fff,
+   0 13px 0 -10px #fff,
+   0 0 0 2px #242424;
 }
 
 .avatar {
@@ -546,13 +562,34 @@ box-shadow: 0 -12px 0 0 white,
     text-align: center;
 }
 
+
+
 @media (max-width:1000px) {
-    
-.product-view {
-    padding: 5px;
+        
+.feedback-card {
+margin-left: 30px;
+margin-right: 30px;
+    }
+
+    .name-col {
+        text-align: center;
+        margin: 0;
+    }
+
+.avatar-col {
+    margin-left: 5px;
+    margin-bottom: 5px;
+}
+
+.no-gutters {
     display: flex;
-   flex-direction: column;
-   align-items: center;
+    flex-direction: column;
+    align-items: center;
+}
+    
+.co {
+    width: 100%;
+    padding-bottom: 0;
 }
 
 .cont {
@@ -569,29 +606,15 @@ box-shadow: 0 -12px 0 0 white,
     margin-top: 30px;
 }
 
-.type-cat {
-    display: grid;
-    grid-template-columns: 33% 33% 33% ;
-    column-gap: 0rem;
-    padding-top: 20px;
-            justify-content: center;
-    margin-right: -15px;
-}
+
 
 .btnn{
     margin: 0;
 }
 
-.btnn:hover {
-    box-shadow: none;
-}
-
 .c-type {
     width: 100%;
-}
-
-.prom {
-    
+    box-shadow: 0 -60px 0 0 white;
 }
 
 #big-screen {
@@ -602,17 +625,183 @@ box-shadow: 0 -12px 0 0 white,
     display: inline-block;
 }
 
-
-.product-row-view {
-    display: grid;
-    grid-template-columns: auto auto;
-}
-
 .product-view {
+    padding: 0;
     display: flex;
    flex-direction: column;
    align-items: center;
 }
 
+.container {
+    padding: 0;
+}
+
+.img {
+    width: 900px;
+    margin-bottom: -70px;
+}
+
+.carousel-inner {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.co {
+    width: 100%;
+}
+
+.mainp {
+    width: 100%;
+}
+
+.prod {
+    position: relative;
+    padding-top: 50px;
+}
+
+.prod:after {
+position: absolute;
+height: 10px;
+width: 10px;
+border-bottom: 2px solid var(--den);
+border-left: 2px solid var(--den);
+transform: rotate(-45deg);
+left: 50%;
+margin-left: -5px;
+top: 18px;
+z-index: 1;
+content: " ";
+display: block;
+}
+
+.prod:before {
+    position: absolute;
+    content: " ";
+    display: block;
+    height: 60px;
+    width: 2px;
+    left: 50%;
+    background: var(--den);
+    margin-left: -1px;
+    top: -30px;
+    z-index: 1;
+}
+
+.img-cover {
+    margin-top: 50px;
+    width: 1000px;
+}
+
 
 }
+
+@media (max-width:1200px)
+ {
+.co {
+width: 100%;
+}
+.cont {
+width: 100%;
+}
+
+.feedback-view {
+    width: 100%;
+}
+
+.con {
+    width: 100%;
+    padding-right: 50px;
+}
+
+.carousel-inner {
+    width: 100%;
+    padding:0;
+}
+
+.prod {
+    width: 100%;
+}
+
+.container {
+    width: 100%;
+    padding: 0;
+}
+
+.type-cat {
+    display: grid;
+    grid-template-columns: 16% 16% 16% 16% 16% 16% ;
+    padding-top: 20px;
+    row-gap: 20px;
+            justify-content: center;
+    margin-right: -15px;
+}
+
+.carousel-control-next {
+    margin-right: -50px;
+}
+.carousel-control-prev {
+    margin-left: -50px;
+}
+
+.carousel-control-prev:hover > .prev-icon {
+    width: 0px;
+    transform: translateX(-5px);
+}
+
+.carousel-control-next:hover > .next-icon{
+    width: 0px;
+    transform: translateX(5px);
+}
+
+ }
+
+ @media (max-width:994px) {
+
+    .product-row-view {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 50% 50%;
+    }
+
+    .carousel-control-next {
+        margin-right: -30px;
+    }
+    
+    .carousel-control-prev {
+       margin-left: -30px;
+    }
+    
+    }
+
+@media (max-width: 700px) {
+    
+.product-row-view {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    column-gap: 0 !important;
+    row-gap: 0;
+    padding-right: 0;
+    padding-left: 0;
+}
+
+.type-cat {
+    display: grid;
+grid-template-columns: 34% 34% 34%;
+    row-gap: 20px;
+    padding-top: 20px;
+            justify-content: center;
+    margin-right: -15px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.carousel-control-next {
+    display: none;
+}
+
+.carousel-control-prev {
+    display: none;
+}
+}
+
