--- a/frontend/src/app/check-out/check-out.component.html
+++ b/frontend/src/app/check-out/check-out.component.html
@@ -5,8 +5,8 @@
         <li>Payment</li>
       </ul>
            
-        <div class="row" style="padding-top: 10px;">
-            <div class="col-6">
+        <div class="row check-out" style="padding-top: 10px;">
+            <div class="col shipping-info">
                   <h3 style="font-weight: bold;"> Ship to</h3>
                 <form [formGroup]="form">
         
@@ -46,10 +46,11 @@
                             </div>
                         </div>
                         
-                    </form></div>
-                    <div class="col">
+                    </form>
+                </div>
+                    <div class="col space">
                     </div>
-            <div class="col-5">
+            <div class="col cart-summary">
                 <div class="card">
                     <div class="card-body">
                         <h3 style="font-weight:600">Order Summary</h3>
