--- a/frontend/src/app/order-success/order-success.component.html
+++ b/frontend/src/app/order-success/order-success.component.html
@@ -4,9 +4,9 @@
 <h3 style="font-weight: bold;"> Your order has been placed!</h3></div>
         </div>
     
-    <div class="row" style="padding-top: 50px;">
+    <div class="row order-success" style="padding-top: 50px;">
                  
-        <div class="col-6">
+        <div class="col shipping-info">
                         <h4 style="font-weight: bold; padding-bottom: 10px; border-bottom: 1px solid #e0e0e0;">Shipping Information</h4>
                         <p>Cuong Nguyen - 0919941294 - KTX khu A DHQG TpHCM khu pho 6 Linh Trung Thu Duc</p>
                         <p style="font-weight: bold;">Cash on Delivery</p>
@@ -17,7 +17,7 @@
 <button routerLink="/" class="btn btn-back"> Continue Shopping</button>
         </div>
                       
-        <div class="col-6">
+        <div class="col cart-summary">
                         <div class="card">
                             <ul class="list-group list-group-flush">
                                     <li class="list-group-item">
