--- a/frontend/src/app/cancel-order/cancel-order.component.css
+++ b/frontend/src/app/cancel-order/cancel-order.component.css
@@ -67,3 +67,9 @@ color: yellowgreen;
     justify-content: center;
     margin-bottom: 100px;
 }
+
+@media (max-width:800px) {
+  .ec {
+    margin-bottom: 40px;
+  }
+}
