--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -1,5 +1,5 @@
  section {
-     padding: 20px;
+     padding-top: 20px;
     margin-top: 20px;
 
  }
@@ -11,6 +11,13 @@
     padding: 20px;
 padding-top: 0;
     margin: 0 auto;
+}
+
+@media (max-width:500px) {
+    .login-form {
+        width:470px;
+
+    }
 }
 
 .col {
