--- a/frontend/src/app/shopping-cart/shopping-cart.component.css
+++ b/frontend/src/app/shopping-cart/shopping-cart.component.css
@@ -168,3 +168,69 @@ transform: rotate(0deg);
     padding-top: 40px;
 }
 
+.shop-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.shop-col {
+
+    flex: 4;
+    border-right: 1px solid #e0e0e0;
+}
+
+.cart-col {
+    flex: 8;
+    padding-bottom: 200px;
+}
+
+.shopping-cart-title{
+   font-weight: bolder; 
+   font-size: 50px; 
+}
+
+.sticky-top {
+    top: 200px;
+    margin-top: 200px;
+}
+
+.item-in-cart {
+font-size: 13px; 
+margin-top: 50px; 
+margin-bottom: 20px;
+}
+
+@media (max-width:800px) {
+
+.shop-row {
+    flex-direction: column;
+}
+    .sticky-top {
+        top: unset;
+        margin-top: 100px;
+    }
+
+    .shop-col {
+        flex: 1;
+        border-right: unset;
+        text-align: center;
+    }
+
+    .item-in-cart {
+        margin-top: 0;
+        text-align: center;
+        margin-bottom: 50px;
+    }
+    
+    .cart-col {
+        width: 100%;
+        flex: 1;
+        padding-bottom: 200px;
+    }
+
+    .detail {
+        padding-left: 0;
+    }
+    
+}
+
