--- a/frontend/src/app/shopping-cart/shopping-cart.component.html
+++ b/frontend/src/app/shopping-cart/shopping-cart.component.html
@@ -1,12 +1,14 @@
 <div class="container">
-  <div class="row" >
-    <div class="col-4" style="border-right: 1px solid #e0e0e0;">
-      <h1 style="font-weight: bolder; font-size: 50px; width: 100px;">Shopping Cart</h1>
+  <div class="row shop-row" >
+    <div class="col shop-col">
+      <div class="shopping-cart-title sticky-top"> 
+        Shopping Cart
+      </div>
     </div>
-    <div class="col" >
+    <div class="col cart-col" >
       <div class="detail">
     <!-- <button class="btn btn-sm">Clear all items</button>--> 
-  <p style="font-size: 13px; margin-top: 50px; margin-bottom: 20px;"> You have 1 item(s) in your cart</p>
+  <p class="item-in-cart"> You have 1 item(s) in your cart</p>
    <!--    <table class="table" style="margin-top: 20px;">
         <thead >
           <tr>
@@ -126,9 +128,4 @@
     </div>
   </div>
     
-    
-  <div class="row" style="height: 200px;">
-    <div class="col-4"></div>
-    <div class="col"></div>
-</div>
 </div>
