--- a/frontend/src/app/product-detail/product-detail.component.html
+++ b/frontend/src/app/product-detail/product-detail.component.html
@@ -16,17 +16,18 @@
         </div>
 
         <div class="col col-10">
-            <div class="detail">
-                <div class="row no-gutters no r-in">
+            <div class="detail" (ngOninit)="ngOninit()" >
+               
+                <div class="row no-gutters no r-in"  *ngIf='product'>
                     <div class="col-5 image">
-                        <img src="https://cdn140.picsart.com/265075338006212.png?r1024x1024" alt="Product-image"
+                        <img src={{product.imgurl}} alt="Product-image"
                             style="width: 100%;">
                     </div>
                     <div class="col-7" style="padding-left: 50px; padding-top: 30px;">
-                        <p>#001</p>
-                        <h2>Bulbasaur</h2>
+                        <p>{{product.id}}</p>
+                        <h2>{{product.name}}</h2>
                         <h6>Grass <span>/ Poison</span> </h6>
-                        <h2 style="font-weight: 600; color: #d93a3a;">$5.00</h2>
+                        <h2 style="font-weight: 600; color: #d93a3a;">{{product.price}}</h2>
                         <p style="text-decoration: line-through; opacity: 0.5"> $9.00</p>
                         <div style="margin-top: 50px; width: 100px;">
                             <product-quantity></product-quantity>
@@ -37,8 +38,6 @@
                 <h4 class=" headtype">Description</h4>
                 <div class="row no-gutters r-in">
                     <div class="conbo">
-
-
                         <p>Height : </p>
                         <p>Weight : </p>
                         <p>Moves : </p>
