--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -1,7 +1,7 @@
 <section>
         <div class="login-form">
         <h1 style="margin-bottom: 35px; font-weight: bolder;" class="text-center">Sign Up</h1>
-        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
        <!--
             <div class="name">
                     <div class="form-group" >
@@ -32,11 +32,25 @@
                 id="name"
                 type="text" 
                 class="form-control"
-                placeholder="Be Sa">  
-                <div *ngIf="name.touched && name.invalid" class="alert alert-danger">
-                        <div *ngIf="name.errors.required"> Name required</div>
+                placeholder="Be Sa"
+                [ngClass]="{ 'is-invalid': submitted && f.name.errors }">  
+                <div *ngIf="submitted && f.name.errors" class="alert alert-danger">
+                        <div *ngIf="f.name.errors.required"> Name required</div>
                 </div>
         </div>
+
+        <div class="form-group" >
+                <label>Phone</label>
+                <input 
+                    formControlName="phone"
+                    id="phone"
+                    type="text" 
+                    class="form-control"
+                    [ngClass]="{ 'is-invalid': submitted && f.phone.errors }">  
+                    <div *ngIf="submitted && f.phone.errors" class="alert alert-danger">
+                         <div *ngIf="f.phone.errors.required"> Phone required</div>
+                    </div>
+            </div>
 
         <div class="form-group">
             <label> Email </label>
@@ -45,11 +59,12 @@
                 id="email"
                 type="text" 
                 class="form-control"
-                placeholder="besa@example.com">  
-                <div *ngIf="email.touched && email.invalid" class="alert alert-danger">
-                        <div *ngIf="email.errors.required"> Email required</div>
-                        <div *ngIf="email.errors.email"> Email must be a valid email address</div>
-                        <div *ngIf="email.errors.shouldBeUnique"> Email is already taken</div>
+                placeholder="besa@example.com"
+                [ngClass]="{ 'is-invalid': submitted && f.email.errors }">  
+                <div *ngIf="submitted && f.email.errors" class="alert alert-danger">
+                        <div *ngIf="f.email.errors.required"> Email required</div>
+                        <div *ngIf="f.email.errors.email"> Email must be a valid email address</div>
+                        <div *ngIf="f.email.errors.shouldBeUnique"> Email is already taken</div>
                 </div>
         </div>
     
@@ -59,15 +74,16 @@
                 formControlName="password"
                 id="password"
                 type="password" 
-                class="form-control"> 
-                <div *ngIf="password.touched && password.invalid" class="alert alert-danger">
-                        <div *ngIf="password.errors.required"> Password required</div>
-                        <div *ngIf="password.errors.minlength"> Password should be minimum 6 characters</div>
+                class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.password.errors }"> 
+                <div *ngIf="submitted && f.password.errors" class="alert alert-danger">
+                        <div *ngIf="f.password.errors.required"> Password required</div>
+                        <div *ngIf="f.password.errors.minlength"> Password should be minimum 6 characters</div>
                 </div>
         </div>
         <div id="wrapper">    <button class="btn">Sign Up</button>
         </div>
- 
+        <a [routerLink]="['/login']" class="btn btn-link">Cancel</a>
     </form>
     </div>
     </section>
